feat: config oracledb

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=PharmaEaseTotem
-
-spring.datasource.url=jdbc:h2:mem:totem
-
 server.error.include-stacktrace=never
+
+spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/<SID>
+spring.datasource.username=rm551283
+spring.datasource.password=Fiap24
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
