--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,4 @@
 spring.application.name=PharmaEaseTotem
 server.error.include-stacktrace=never
 
-spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/<SID>
-spring.datasource.username=rm551283
-spring.datasource.password=Fiap24
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:h2:mem:pharme
