feat: add controller, model class, repository and service 'Compra'

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,3 +1,9 @@
 cliente.cpf.notblank=O CPF é obrigatório
 
 cliente.cpf.pattern=CPF inválido
+
+compra.idCliente.notblank=O ID do cliente não pode estar em branco
+
+compra.idRemedio.notblank=O ID do remédio não pode estar em branco
+
+compra.dataCompra.notblank=A data da compra não pode estar em branco
